<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LearnUkulele</string>
    <string name="action_settings">Settings</string>
    <string name="main_title">Learn to Play Ukulele : </string>
    <string name="main_chords">MAIN UKULELE CHORDS </string>
    <string name="main_wikipedia">UKULELE INFORMATION </string>
    <string name="main_learn">LEARN SONGS </string>
    <string name="title_activity_chords">ChordsActivity</string>
    <string name="common_chords">Ukulele chords:</string>
    <string name="title_activity_wiki">WikiActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_songs">SongsActivity</string>
    <string name="list_songs">PLAYLIST</string>
    <string name="title_activity_learn_song">LearnSongActivity</string>
    <string name="firstC"></string>
    <string name="learn_song">Selected SONG:</string>
    <string name="button_start">Play song</string>
    <string name="button_stop">Stop song</string>
    <string name="button_YOUTUBE">YOUTUBE</string>
    <string name="button_login">Login</string>
    <string name="button_signUp">Sign up</string>
    <string name="label_username">Username</string>
    <string name="label_password">Password</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_resume">ResumeActivity</string>
    <string name="resumeButton">ACTIVITY RESUME</string>


</resources>
