<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context="com.gpds.ukelele.Login">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/label_username"
            android:id="@+id/textView"
            android:layout_alignBaseline="@+id/usernameTextbox"
            android:layout_alignBottom="@+id/usernameTextbox"
            android:layout_alignEnd="@+id/textView3" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/usernameTextbox"
            android:layout_above="@+id/textView3"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="92dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/label_password"
            android:id="@+id/textView3"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordTextbox"
            android:layout_above="@+id/loginButton"
            android:layout_marginBottom="65dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_login"
            android:id="@+id/loginButton"
            android:layout_above="@+id/singupButton"
            android:layout_alignParentEnd="true"
            android:onClick="login" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_signUp"
            android:id="@+id/singupButton"
            android:layout_alignParentBottom="true"
            android:layout_alignEnd="@+id/loginButton"
            android:layout_alignParentStart="true"
            android:onClick="singup" />
    </LinearLayout>
</RelativeLayout>
